03_advance_of_kubernetes_01/03_ingress_controller/03_magical_nginx_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: magicalnginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: magical-nginx
  template:
    metadata:
      labels:
        app: magical-nginx
    spec:
      containers:
      - name: magical-nginx
        image: anshuldevops/magicalnginx:latest
        ports:
        - name: nginx-port
          containerPort: 8080
